--- a/docs/docs-ref-autogen/excel/excel.removeduplicatesresult.yml
+++ b/docs/docs-ref-autogen/excel/excel.removeduplicatesresult.yml
@@ -1,17 +1,17 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: cf53d2f1b4be020686b4df6de8468a6c9bda276a
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: 5f9aebbab6f3c0ec1756cf2a6c5419d6db6ca08a
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30107678"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413845"
 items:
 - uid: excel.Excel.RemoveDuplicatesResult
   summary: >-
-    <span data-ttu-id="9fd4e-101">代表区域中的 removeDuplicates 方法的结果</span><span class="sxs-lookup"><span data-stu-id="9fd4e-101">Represents the results from the removeDuplicates method on range</span></span>
+    <span data-ttu-id="84b9b-101">代表区域中的 removeDuplicates 方法的结果</span><span class="sxs-lookup"><span data-stu-id="84b9b-101">Represents the results from the removeDuplicates method on range</span></span>
 
 
-    <span data-ttu-id="9fd4e-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fd4e-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="84b9b-102">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84b9b-102">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: Excel.RemoveDuplicatesResult
   fullName: Excel.RemoveDuplicatesResult
@@ -30,7 +30,7 @@ items:
   - excel.Excel.RemoveDuplicatesResult.toJSON
   - excel.Excel.RemoveDuplicatesResult.uniqueRemaining
 - uid: excel.Excel.RemoveDuplicatesResult.context
-  summary: <span data-ttu-id="9fd4e-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-103">The request context associated with the object.</span></span> <span data-ttu-id="9fd4e-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-104">This connects the add-in's process to the Office host application's process.</span></span>
+  summary: <span data-ttu-id="84b9b-103">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="84b9b-103">The request context associated with the object.</span></span> <span data-ttu-id="84b9b-104">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="84b9b-104">This connects the add-in's process to the Office host application's process.</span></span>
   isPreview: true
   name: context
   fullName: context
@@ -43,18 +43,18 @@ items:
       type:
       - RequestContext
 - uid: excel.Excel.RemoveDuplicatesResult.load
-  summary: <span data-ttu-id="9fd4e-105">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9fd4e-106">在读取属性之前, 必须先调用 "context, sync ()"。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-106">You must call "context.sync()" before reading the properties.</span></span>
+  summary: <span data-ttu-id="84b9b-105">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-105">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="84b9b-106">在读取属性之前，你必须调用“context.sync()”。</span><span class="sxs-lookup"><span data-stu-id="84b9b-106">You must call "context.sync()" before reading the properties.</span></span>
   remarks: >-
-    <span data-ttu-id="9fd4e-107">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="9fd4e-107">In addition to this signature, this method has the following signatures:</span></span>
+    <span data-ttu-id="84b9b-107">除了此签名之外, 此方法还具有以下签名:</span><span class="sxs-lookup"><span data-stu-id="84b9b-107">In addition to this signature, this method has the following signatures:</span></span>
 
 
-    <span data-ttu-id="9fd4e-108">`load(option?: string | string[]): Excel.RemoveDuplicatesResult`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-108">`load(option?: string | string[]): Excel.RemoveDuplicatesResult` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
+    <span data-ttu-id="84b9b-108">`load(option?: string | string[]): Excel.RemoveDuplicatesResult`-Where 选项是一个逗号分隔的字符串或一个字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-108">`load(option?: string | string[]): Excel.RemoveDuplicatesResult` - Where option is a comma-delimited string or an array of strings that specify the properties to load.</span></span>
 
 
-    <span data-ttu-id="9fd4e-109">`load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-109">`load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+    <span data-ttu-id="84b9b-109">`load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult`-Where 选项。选择是一个用逗号分隔的字符串, 用于指定要加载的属性和选项。 expand 是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-109">`load(option?: { select?: string; expand?: string; }): Excel.RemoveDuplicatesResult` - Where option.select is a comma-delimited string that specifies the properties to load, and options.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
 
 
-    <span data-ttu-id="9fd4e-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult` - Only available on collection types.</span></span> <span data-ttu-id="9fd4e-111">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-111">It is similar to the preceding signature.</span></span> <span data-ttu-id="9fd4e-112">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-112">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="9fd4e-113">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-113">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="9fd4e-114">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-114">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
+    <span data-ttu-id="84b9b-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult`-仅适用于集合类型。</span><span class="sxs-lookup"><span data-stu-id="84b9b-110">`load(option?: { select?: string; expand?: string; top?: number; skip?: number }): Excel.RemoveDuplicatesResult` - Only available on collection types.</span></span> <span data-ttu-id="84b9b-111">它类似于前面的签名。</span><span class="sxs-lookup"><span data-stu-id="84b9b-111">It is similar to the preceding signature.</span></span> <span data-ttu-id="84b9b-112">top 指定结果中可包含的集合项的最大数量。</span><span class="sxs-lookup"><span data-stu-id="84b9b-112">Option.top specifies the maximum number of collection items that can be included in the result.</span></span> <span data-ttu-id="84b9b-113">选项。 skip 指定要跳过且不包含在结果中的项目数。</span><span class="sxs-lookup"><span data-stu-id="84b9b-113">Option.skip specifies the number of items that are to be skipped and not included in the result.</span></span> <span data-ttu-id="84b9b-114">如果指定了 top 选项, 则在跳过指定数目的项目后将启动结果集。</span><span class="sxs-lookup"><span data-stu-id="84b9b-114">If option.top is specified, the result set will start after skipping the specified number of items.</span></span>
   isPreview: true
   name: load(option)
   fullName: load(option)
@@ -73,7 +73,7 @@ items:
       type:
       - excel.Excel.Interfaces.RemoveDuplicatesResultLoadOptions
 - uid: excel.Excel.RemoveDuplicatesResult.load_1
-  summary: <span data-ttu-id="9fd4e-115">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9fd4e-116">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-116">You must call `context.sync()` before reading the properties.</span></span>
+  summary: <span data-ttu-id="84b9b-115">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-115">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="84b9b-116">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="84b9b-116">You must call `context.sync()` before reading the properties.</span></span>
   isPreview: true
   name: load(propertyNames)
   fullName: load(propertyNames)
@@ -88,11 +88,11 @@ items:
       description: ''
     parameters:
     - id: propertyNames
-      description: <span data-ttu-id="9fd4e-117">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+      description: <span data-ttu-id="84b9b-117">一个以逗号分隔的字符串或字符串数组, 用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
       type:
       - string | string[]
 - uid: excel.Excel.RemoveDuplicatesResult.load_2
-  summary: <span data-ttu-id="9fd4e-118">对命令进行排队, 以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="9fd4e-119">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-119">You must call `context.sync()` before reading the properties.</span></span>
+  summary: <span data-ttu-id="84b9b-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="84b9b-119">在读取属性`context.sync()`之前, 必须先调用。</span><span class="sxs-lookup"><span data-stu-id="84b9b-119">You must call `context.sync()` before reading the properties.</span></span>
   isPreview: true
   name: load(propertyNamesAndPaths)
   fullName: load(propertyNamesAndPaths)
@@ -107,15 +107,15 @@ items:
       description: ''
     parameters:
     - id: propertyNamesAndPaths
-      description: <span data-ttu-id="9fd4e-120">其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-120">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
+      description: <span data-ttu-id="84b9b-120">其中, propertyNamesAndPaths 是用逗号分隔的字符串, 用于指定要加载的属性和 propertyNamesAndPaths。扩展是一个用逗号分隔的字符串, 用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="84b9b-120">Where propertyNamesAndPaths.select is a comma-delimited string that specifies the properties to load, and propertyNamesAndPaths.expand is a comma-delimited string that specifies the navigation properties to load.</span></span>
       type:
       - '{ select?: string; expand?: string; }'
 - uid: excel.Excel.RemoveDuplicatesResult.removed
   summary: >-
-    <span data-ttu-id="9fd4e-121">由操作删除的重复行的数目。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-121">Number of duplicated rows removed by the operation.</span></span>
+    <span data-ttu-id="84b9b-121">由操作删除的重复行数。</span><span class="sxs-lookup"><span data-stu-id="84b9b-121">Number of duplicated rows removed by the operation.</span></span>
 
 
-    <span data-ttu-id="9fd4e-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fd4e-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="84b9b-122">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84b9b-122">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: removed
   fullName: removed
@@ -128,7 +128,7 @@ items:
       type:
       - number
 - uid: excel.Excel.RemoveDuplicatesResult.toJSON
-  summary: <span data-ttu-id="9fd4e-123">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-123">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="9fd4e-124">(`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 RemoveDuplicatesResult 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.RemoveDuplicatesResultData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-124">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RemoveDuplicatesResult object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RemoveDuplicatesResultData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
+  summary: <span data-ttu-id="84b9b-123">重写 JavaScript `toJSON()`方法, 以便在将 API 对象传递到`JSON.stringify()` <!-- -->时提供更有用的输出。</span><span class="sxs-lookup"><span data-stu-id="84b9b-123">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`<!-- -->.</span></span> <span data-ttu-id="84b9b-124">(`JSON.stringify`<!-- -->反过来, 也会调用传递`toJSON`给它的对象的方法。)尽管原始 RemoveDuplicatesResult 对象是 API 对象, 但该`toJSON`方法返回一个纯 JavaScript 对象 (类型为`Excel.Interfaces.RemoveDuplicatesResultData` <!-- -->), 其中包含原始对象中任何已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="84b9b-124">(`JSON.stringify`<!-- -->, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.RemoveDuplicatesResult object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.RemoveDuplicatesResultData`<!-- -->) that contains shallow copies of any loaded child properties from the original object.</span></span>
   isPreview: true
   name: toJSON()
   fullName: toJSON()
@@ -143,10 +143,10 @@ items:
       description: ''
 - uid: excel.Excel.RemoveDuplicatesResult.uniqueRemaining
   summary: >-
-    <span data-ttu-id="9fd4e-125">结果范围中出现的剩余唯一行数。</span><span class="sxs-lookup"><span data-stu-id="9fd4e-125">Number of remaining unique rows present in the resulting range.</span></span>
+    <span data-ttu-id="84b9b-125">所生成的区域中存在的剩余唯一行数。</span><span class="sxs-lookup"><span data-stu-id="84b9b-125">Number of remaining unique rows present in the resulting range.</span></span>
 
 
-    <span data-ttu-id="9fd4e-126">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9fd4e-126">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="84b9b-126">\[[API 集: ExcelApi BETA (仅限预览)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="84b9b-126">\[ [API set: ExcelApi BETA (PREVIEW ONLY)](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
   isPreview: true
   name: uniqueRemaining
   fullName: uniqueRemaining
@@ -158,3 +158,4 @@ items:
     return:
       type:
       - number
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"84b9b-127\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"84b9b-127\">Examples</span></span>\n\n```typescript\nawait Excel.run(async (context) => {\n    const sheet = context.workbook.worksheets.getItem(\"Sample\");\n    const range = sheet.getRange(\"B2:D11\");\n\n    const deleteResult = range.removeDuplicates([0],true);    \n    deleteResult.load();    \n    await context.sync();\n\n    console.log(deleteResult.removed + \" entries with duplicate names removed.\");\n    console.log(deleteResult.uniqueRemaining + \" entries with unique names remain in the range.\");\n});\n```"
