--- a/docs/docs-ref-autogen/office/office.officetheme.yml
+++ b/docs/docs-ref-autogen/office/office.officetheme.yml
@@ -1,30 +1,30 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 871b05194a2f98c8504ae3f2b65fc126756a767c
-ms.sourcegitcommit: 31847d2ea6be78b8f473dfbfb0a575fdecd877be
+ms.openlocfilehash: 6f99eae7abf480ae6e44e64baba3d34792f8e71d
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 11/13/2018
-ms.locfileid: "26297689"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413817"
 items:
 - uid: office.Office.OfficeTheme
   summary: >-
-    <span data-ttu-id="5d3f6-101">提供了访问 Office 主题颜色的属性。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-101">Provides access to the properties for Office theme colors.</span></span>
+    <span data-ttu-id="d972b-101">提供了访问 Office 主题颜色的属性。</span><span class="sxs-lookup"><span data-stu-id="d972b-101">Provides access to the properties for Office theme colors.</span></span>
 
 
-    <span data-ttu-id="5d3f6-102">使用 Office 主题颜色，可以与用户选择的文件当前 Office 主题协调配色方案加载项的&gt;Office 帐户&gt;应用跨所有 Office 主机应用程序的 Office 主题 UI。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-102">Using Office theme colors lets you coordinate the color scheme of your add-in with the current Office theme selected by the user with File &gt; Office Account &gt; Office Theme UI, which is applied across all Office host applications.</span></span> <span data-ttu-id="5d3f6-103">使用 Office 主题颜色适用于邮件和任务窗格外接程序。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-103">Using Office theme colors is appropriate for mail and task pane add-ins.</span></span>
+    <span data-ttu-id="d972b-102">使用 Office 主题颜色, 可以将加载项的配色方案与用户选择的当前 office 主题进行协调, 该主题是在&gt;所有 office &gt;主机应用程序中应用的文件 office 帐户 Office 主题 UI。</span><span class="sxs-lookup"><span data-stu-id="d972b-102">Using Office theme colors lets you coordinate the color scheme of your add-in with the current Office theme selected by the user with File &gt; Office Account &gt; Office Theme UI, which is applied across all Office host applications.</span></span> <span data-ttu-id="d972b-103">使用 Office 主题颜色适用于邮件和任务窗格外接程序。</span><span class="sxs-lookup"><span data-stu-id="d972b-103">Using Office theme colors is appropriate for mail and task pane add-ins.</span></span>
   remarks: >-
-    <span data-ttu-id="5d3f6-104">**支持详细信息**</span><span class="sxs-lookup"><span data-stu-id="5d3f6-104">**Support details**</span></span>
+    <span data-ttu-id="d972b-104">**支持详细信息**</span><span class="sxs-lookup"><span data-stu-id="d972b-104">**Support details**</span></span>
 
 
-    <span data-ttu-id="5d3f6-105">在以下矩阵大写 Y 指示在相应的 Office 主机应用程序支持这些属性。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-105">A capital Y in the following matrix indicates that these properties are supported in the corresponding Office host application.</span></span> <span data-ttu-id="5d3f6-106">空单元格指示 Office 主机应用程序不支持此枚举。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-106">An empty cell indicates that the Office host application doesn't support this enumeration.</span></span>
+    <span data-ttu-id="d972b-105">下表中的大写 Y 表示相应的 Office 主机应用程序支持这些属性。</span><span class="sxs-lookup"><span data-stu-id="d972b-105">A capital Y in the following matrix indicates that these properties are supported in the corresponding Office host application.</span></span> <span data-ttu-id="d972b-106">空的单元格表示相应的 Office 主机应用程序不支持此枚举。</span><span class="sxs-lookup"><span data-stu-id="d972b-106">An empty cell indicates that the Office host application doesn't support this enumeration.</span></span>
 
 
-    <span data-ttu-id="5d3f6-107">有关 Office 主机应用程序和服务器要求的详细信息，请参阅[Requirements for Office 加载项运行](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-107">For more information about Office host application and server requirements, see [Requirements for running Office Add-ins](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.</span></span>
+    <span data-ttu-id="d972b-107">有关 office 主机应用程序和服务器要求的详细信息, 请参阅[运行 office 外接](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->程序的要求。</span><span class="sxs-lookup"><span data-stu-id="d972b-107">For more information about Office host application and server requirements, see [Requirements for running Office Add-ins](https://docs.microsoft.com/office/dev/add-ins/concepts/requirements-for-running-office-add-ins)<!-- -->.</span></span>
 
 
-    <span data-ttu-id="5d3f6-108">*支持的主机（按平台）*</span><span class="sxs-lookup"><span data-stu-id="5d3f6-108">*Supported hosts, by platform*</span></span> <table> <tr><th> </th><th> <span data-ttu-id="5d3f6-109">Office for Windows Desktop</span><span class="sxs-lookup"><span data-stu-id="5d3f6-109">Office for Windows desktop</span></span> </th></tr> <tr><td><span data-ttu-id="5d3f6-110"><strong>Excel</strong></span><span class="sxs-lookup"><span data-stu-id="5d3f6-110"><strong> Excel </strong></span></span></td><td> <span data-ttu-id="5d3f6-111">Y</span><span class="sxs-lookup"><span data-stu-id="5d3f6-111">Y</span></span> </td></tr> <tr><td><span data-ttu-id="5d3f6-112"><strong>Outlook</strong></span><span class="sxs-lookup"><span data-stu-id="5d3f6-112"><strong> Outlook </strong></span></span></td><td> <span data-ttu-id="5d3f6-113">（preview) 中的 Y</span><span class="sxs-lookup"><span data-stu-id="5d3f6-113">Y (in preview)</span></span> </td></tr> <tr><td><span data-ttu-id="5d3f6-114"><strong>PowerPoint</strong></span><span class="sxs-lookup"><span data-stu-id="5d3f6-114"><strong> PowerPoint </strong></span></span></td><td> <span data-ttu-id="5d3f6-115">Y</span><span class="sxs-lookup"><span data-stu-id="5d3f6-115">Y</span></span> </td></tr> <tr><td><span data-ttu-id="5d3f6-116"><strong>Word</strong></span><span class="sxs-lookup"><span data-stu-id="5d3f6-116"><strong> Word </strong></span></span></td><td> <span data-ttu-id="5d3f6-117">Y</span><span class="sxs-lookup"><span data-stu-id="5d3f6-117">Y</span></span> </td></tr> </table>
+    <span data-ttu-id="d972b-108">*支持的主机（按平台）*</span><span class="sxs-lookup"><span data-stu-id="d972b-108">*Supported hosts, by platform*</span></span> <table> <tr><th> </th><th> <span data-ttu-id="d972b-109">Office for Windows Desktop</span><span class="sxs-lookup"><span data-stu-id="d972b-109">Office for Windows desktop</span></span> </th></tr> <tr><td><span data-ttu-id="d972b-110"><strong>Excel</strong></span><span class="sxs-lookup"><span data-stu-id="d972b-110"><strong> Excel </strong></span></span></td><td> <span data-ttu-id="d972b-111">Y</span><span class="sxs-lookup"><span data-stu-id="d972b-111">Y</span></span> </td></tr> <tr><td><span data-ttu-id="d972b-112"><strong>Outlook</strong></span><span class="sxs-lookup"><span data-stu-id="d972b-112"><strong> Outlook </strong></span></span></td><td> <span data-ttu-id="d972b-113">Y (在预览中)</span><span class="sxs-lookup"><span data-stu-id="d972b-113">Y (in preview)</span></span> </td></tr> <tr><td><span data-ttu-id="d972b-114"><strong>PowerPoint</strong></span><span class="sxs-lookup"><span data-stu-id="d972b-114"><strong> PowerPoint </strong></span></span></td><td> <span data-ttu-id="d972b-115">Y</span><span class="sxs-lookup"><span data-stu-id="d972b-115">Y</span></span> </td></tr> <tr><td><span data-ttu-id="d972b-116"><strong>Word</strong></span><span class="sxs-lookup"><span data-stu-id="d972b-116"><strong> Word </strong></span></span></td><td> <span data-ttu-id="d972b-117">Y</span><span class="sxs-lookup"><span data-stu-id="d972b-117">Y</span></span> </td></tr> </table>
 
-    #### <a name="examples"></a><span data-ttu-id="5d3f6-118">示例</span><span class="sxs-lookup"><span data-stu-id="5d3f6-118">Examples</span></span>
+    #### <a name="examples"></a><span data-ttu-id="d972b-118">示例</span><span class="sxs-lookup"><span data-stu-id="d972b-118">Examples</span></span>
 
 
     ```javascript
@@ -53,7 +53,7 @@ items:
   - office.Office.OfficeTheme.controlBackgroundColor
   - office.Office.OfficeTheme.controlForegroundColor
 - uid: office.Office.OfficeTheme.bodyBackgroundColor
-  summary: <span data-ttu-id="5d3f6-119">获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题正文背景颜色。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-119">Gets the Office theme body background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
+  summary: <span data-ttu-id="d972b-119">以十六进制颜色 (例如 "FFA500") 获取 Office 主题正文的背景色。</span><span class="sxs-lookup"><span data-stu-id="d972b-119">Gets the Office theme body background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
   name: bodyBackgroundColor
   fullName: bodyBackgroundColor
   langs:
@@ -65,7 +65,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.bodyForegroundColor
-  summary: <span data-ttu-id="5d3f6-120">获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题正文前景颜色。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-120">Gets the Office theme body foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
+  summary: <span data-ttu-id="d972b-120">获取 Office 主题正文前景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="d972b-120">Gets the Office theme body foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
   name: bodyForegroundColor
   fullName: bodyForegroundColor
   langs:
@@ -77,7 +77,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.controlBackgroundColor
-  summary: <span data-ttu-id="5d3f6-121">获取作为十六进制颜色占据 (例如"FFA500") 的 Office 主题控件背景颜色。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-121">Gets the Office theme control background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
+  summary: <span data-ttu-id="d972b-121">获取 Office 主题控件的背景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="d972b-121">Gets the Office theme control background color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
   name: controlBackgroundColor
   fullName: controlBackgroundColor
   langs:
@@ -89,7 +89,7 @@ items:
       type:
       - string
 - uid: office.Office.OfficeTheme.controlForegroundColor
-  summary: <span data-ttu-id="5d3f6-122">获取 Office 主题正文控件颜色作为十六进制颜色占据 (例如"FFA500")。</span><span class="sxs-lookup"><span data-stu-id="5d3f6-122">Gets the Office theme body control color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
+  summary: <span data-ttu-id="d972b-122">获取 Office 主题控件的前景色作为三元的十六进制颜色 (例如, "FFA500")。</span><span class="sxs-lookup"><span data-stu-id="d972b-122">Gets the Office theme control foreground color as a hexadecimal color triplet (e.g. "FFA500").</span></span>
   name: controlForegroundColor
   fullName: controlForegroundColor
   langs:
