--- a/docs/docs-ref-autogen/outlook/office.attachmentdetails.yml
+++ b/docs/docs-ref-autogen/outlook/office.attachmentdetails.yml
@@ -1,24 +1,24 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 2ceaf26160eaef6116553f85a036b0789f4ad7b3
-ms.sourcegitcommit: b0b614f5315ab2e5c1e0ea51c687498f87684a07
+ms.openlocfilehash: 938165fd3826696d9ee6b8af5203c5ad13935c50
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/15/2019
-ms.locfileid: "30056051"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413768"
 items:
 - uid: outlook.Office.AttachmentDetails
   summary: >-
-    <span data-ttu-id="74d1a-p101">表示服务器中一个项目上的附件。仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="74d1a-p101">Represents an attachment on an item from the server. Read mode only.</span></span>
+    <span data-ttu-id="98a99-101">表示服务器中一个项目上的附件。</span><span class="sxs-lookup"><span data-stu-id="98a99-101">Represents an attachment on an item from the server.</span></span> <span data-ttu-id="98a99-102">仅限阅读模式。</span><span class="sxs-lookup"><span data-stu-id="98a99-102">Read mode only.</span></span>
 
 
-    <span data-ttu-id="74d1a-103">**AttachmentDetails**对象的数组作为约会或邮件项目的附件属性返回。</span><span class="sxs-lookup"><span data-stu-id="74d1a-103">An array of **AttachmentDetails** objects is returned as the attachments property of an appointment or message item.</span></span>
+    <span data-ttu-id="98a99-103">**AttachmentDetails**对象的数组作为约会或邮件项目的附件属性返回。</span><span class="sxs-lookup"><span data-stu-id="98a99-103">An array of **AttachmentDetails** objects is returned as the attachments property of an appointment or message item.</span></span>
 
 
-    <span data-ttu-id="74d1a-104">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="74d1a-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+    <span data-ttu-id="98a99-104">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="98a99-104">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
   remarks: >-
-    <table> <tr><td>[<span data-ttu-id="74d1a-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="74d1a-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="74d1a-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="74d1a-106">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="74d1a-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="74d1a-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="74d1a-108">阅读</span><span class="sxs-lookup"><span data-stu-id="74d1a-108">Read</span></span></td></tr> </table><span data-ttu-id="74d1a-109">
+    <table> <tr><td>[<span data-ttu-id="98a99-105">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="98a99-105">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="98a99-106">ReadItem</span><span class="sxs-lookup"><span data-stu-id="98a99-106">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="98a99-107">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="98a99-107">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="98a99-108">阅读</span><span class="sxs-lookup"><span data-stu-id="98a99-108">Read</span></span></td></tr> </table><span data-ttu-id="98a99-109">
 
-    ####说明</span><span class="sxs-lookup"><span data-stu-id="74d1a-109">
+    ####说明</span><span class="sxs-lookup"><span data-stu-id="98a99-109">
 
     #### Examples</span></span>
 
@@ -64,8 +64,9 @@ items:
   - outlook.Office.AttachmentDetails.isInline
   - outlook.Office.AttachmentDetails.name
   - outlook.Office.AttachmentDetails.size
+  - outlook.Office.AttachmentDetails.url
 - uid: outlook.Office.AttachmentDetails.attachmentType
-  summary: <span data-ttu-id="74d1a-110">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="74d1a-110">Gets a value that indicates the type of an attachment.</span></span>
+  summary: <span data-ttu-id="98a99-110">获取一个指示附件类型的值。</span><span class="sxs-lookup"><span data-stu-id="98a99-110">Gets a value that indicates the type of an attachment.</span></span>
   name: attachmentType
   fullName: attachmentType
   langs:
@@ -77,7 +78,7 @@ items:
       type:
       - MailboxEnums.AttachmentType
 - uid: outlook.Office.AttachmentDetails.contentType
-  summary: <span data-ttu-id="74d1a-111">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="74d1a-111">Gets the MIME content type of the attachment.</span></span>
+  summary: <span data-ttu-id="98a99-111">获取附件的 MIME 内容类型。</span><span class="sxs-lookup"><span data-stu-id="98a99-111">Gets the MIME content type of the attachment.</span></span>
   name: contentType
   fullName: contentType
   langs:
@@ -89,7 +90,7 @@ items:
       type:
       - string
 - uid: outlook.Office.AttachmentDetails.id
-  summary: <span data-ttu-id="74d1a-112">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="74d1a-112">Gets the Exchange attachment ID of the attachment.</span></span>
+  summary: <span data-ttu-id="98a99-112">获取附件的 Exchange 附件 ID。</span><span class="sxs-lookup"><span data-stu-id="98a99-112">Gets the Exchange attachment ID of the attachment.</span></span>
   name: id
   fullName: id
   langs:
@@ -101,7 +102,7 @@ items:
       type:
       - string
 - uid: outlook.Office.AttachmentDetails.isInline
-  summary: <span data-ttu-id="74d1a-113">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="74d1a-113">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
+  summary: <span data-ttu-id="98a99-113">获取指示是否应在项目正文中显示附件的值。</span><span class="sxs-lookup"><span data-stu-id="98a99-113">Gets a value that indicates whether the attachment should be displayed in the body of the item.</span></span>
   name: isInline
   fullName: isInline
   langs:
@@ -113,7 +114,7 @@ items:
       type:
       - boolean
 - uid: outlook.Office.AttachmentDetails.name
-  summary: <span data-ttu-id="74d1a-114">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="74d1a-114">Gets the name of the attachment.</span></span>
+  summary: <span data-ttu-id="98a99-114">获取附件的名称。</span><span class="sxs-lookup"><span data-stu-id="98a99-114">Gets the name of the attachment.</span></span>
   name: name
   fullName: name
   langs:
@@ -125,7 +126,7 @@ items:
       type:
       - string
 - uid: outlook.Office.AttachmentDetails.size
-  summary: <span data-ttu-id="74d1a-115">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="74d1a-115">Gets the size of the attachment in bytes.</span></span>
+  summary: <span data-ttu-id="98a99-115">获取以字节为单位的附件大小。</span><span class="sxs-lookup"><span data-stu-id="98a99-115">Gets the size of the attachment in bytes.</span></span>
   name: size
   fullName: size
   langs:
@@ -136,3 +137,19 @@ items:
     return:
       type:
       - number
+- uid: outlook.Office.AttachmentDetails.url
+  summary: >-
+    <span data-ttu-id="98a99-116">如果附件的类型为`MailboxEnums.AttachmentType.Cloud` <!-- -->, 则获取附件的 url。</span><span class="sxs-lookup"><span data-stu-id="98a99-116">Gets the url of the attachment if its type is `MailboxEnums.AttachmentType.Cloud`<!-- -->.</span></span>
+
+
+    <span data-ttu-id="98a99-117">\[[API 集: 邮箱预览](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="98a99-117">\[ [API set: Mailbox Preview](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  name: url
+  fullName: url
+  langs:
+  - typeScript
+  type: property
+  syntax:
+    content: 'url: string;'
+    return:
+      type:
+      - string
