--- a/docs/docs-ref-autogen/outlook_1_5/office.emailaddressdetails.yml
+++ b/docs/docs-ref-autogen/outlook_1_5/office.emailaddressdetails.yml
@@ -1,18 +1,18 @@
 ### YamlMime:UniversalReference
-ms.openlocfilehash: 0525db8e0696cc6210355cf2f93ec14861428480
-ms.sourcegitcommit: e9bfba6ec767e9d34fd1cf7b38c30f689617900a
+ms.openlocfilehash: a148aab04c0bda13596df3c6afa0d0db67549c0c
+ms.sourcegitcommit: 788ab9c595c9143f8b8f4822a170e8b90d72ee1d
 ms.translationtype: MT
 ms.contentlocale: zh-CN
-ms.lasthandoff: 02/20/2019
-ms.locfileid: "30093684"
+ms.lasthandoff: 03/06/2019
+ms.locfileid: "30413775"
 items:
 - uid: Outlook_1_5.Office.EmailAddressDetails
   summary: >-
-    <span data-ttu-id="688d5-101">提供电子邮件或约会的发件人或指定收件人的电子邮件属性。</span><span class="sxs-lookup"><span data-stu-id="688d5-101">Provides the email properties of the sender or specified recipients of an email message or appointment.</span></span>
+    <span data-ttu-id="9426b-101">提供电子邮件或约会的发件人或指定收件人的电子邮件属性。</span><span class="sxs-lookup"><span data-stu-id="9426b-101">Provides the email properties of the sender or specified recipients of an email message or appointment.</span></span>
 
 
-    <span data-ttu-id="688d5-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="688d5-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
-  remarks: <table> <tr><td>[<span data-ttu-id="688d5-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="688d5-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="688d5-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="688d5-104">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="688d5-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="688d5-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="688d5-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="688d5-106">Compose or Read</span></span></td></tr> </table>
+    <span data-ttu-id="9426b-102">\[[API 集: 邮箱 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="9426b-102">\[ [API set: Mailbox 1.0](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets) \]</span></span>
+  remarks: <table> <tr><td>[<span data-ttu-id="9426b-103">最低权限级别</span><span class="sxs-lookup"><span data-stu-id="9426b-103">Minimum permission level</span></span>](https://docs.microsoft.com/outlook/add-ins/understanding-outlook-add-in-permissions)</td><td><span data-ttu-id="9426b-104">ReadItem</span><span class="sxs-lookup"><span data-stu-id="9426b-104">ReadItem</span></span></td></tr> <tr><td>[<span data-ttu-id="9426b-105">适用的 Outlook 模式</span><span class="sxs-lookup"><span data-stu-id="9426b-105">Applicable Outlook mode</span></span>](https://docs.microsoft.com/outlook/add-ins/#extension-points)</td><td><span data-ttu-id="9426b-106">撰写或阅读</span><span class="sxs-lookup"><span data-stu-id="9426b-106">Compose or Read</span></span></td></tr> </table>
   name: Office.EmailAddressDetails
   fullName: Office.EmailAddressDetails
   langs:
@@ -25,7 +25,7 @@ items:
   - Outlook_1_5.Office.EmailAddressDetails.emailAddress
   - Outlook_1_5.Office.EmailAddressDetails.recipientType
 - uid: Outlook_1_5.Office.EmailAddressDetails.appointmentResponse
-  summary: <span data-ttu-id="688d5-p101">获取参与者返回的约会响应。此属性仅适用于约会的参与者，由 optionalAttendees 或 requiredAttendees 属性表示。在其他方案中，此属性将返回 undefined。</span><span class="sxs-lookup"><span data-stu-id="688d5-p101">Gets the response that an attendee returned for an appointment. This property applies to only an attendee of an appointment, as represented by the optionalAttendees or requiredAttendees property. This property returns undefined in other scenarios.</span></span>
+  summary: <span data-ttu-id="9426b-107">获取参与者返回的约会响应。</span><span class="sxs-lookup"><span data-stu-id="9426b-107">Gets the response that an attendee returned for an appointment.</span></span> <span data-ttu-id="9426b-108">此属性仅适用于约会的与会者, 由 optionalAttendees 或 requiredAttendees 属性表示。</span><span class="sxs-lookup"><span data-stu-id="9426b-108">This property applies to only an attendee of an appointment, as represented by the optionalAttendees or requiredAttendees property.</span></span> <span data-ttu-id="9426b-109">在其他方案中, 此属性返回未定义。</span><span class="sxs-lookup"><span data-stu-id="9426b-109">This property returns undefined in other scenarios.</span></span>
   name: appointmentResponse
   fullName: appointmentResponse
   langs:
@@ -36,9 +36,9 @@ items:
     return:
       type:
       - MailboxEnums.ResponseType
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"688d5-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"688d5-110\">Examples</span></span>\n\n```javascript\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"9426b-110\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"9426b-110\">Examples</span></span>\n\n```javascript\n// The following sample provides the responses from required attendees.\n// Note that this sample needs the add-in to be in Appointment Read (Attendee) mode.\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.appointmentResponse);\n});\n```"
 - uid: Outlook_1_5.Office.EmailAddressDetails.displayName
-  summary: <span data-ttu-id="688d5-111">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="688d5-111">Gets the display name associated with an email address.</span></span>
+  summary: <span data-ttu-id="9426b-111">获取与电子邮件地址关联的显示名称。</span><span class="sxs-lookup"><span data-stu-id="9426b-111">Gets the display name associated with an email address.</span></span>
   name: displayName
   fullName: displayName
   langs:
@@ -49,9 +49,9 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"688d5-112\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"688d5-112\">Examples</span></span>\n\n```javascript\nvar organizerName = Office.context.mailbox.item.organizer.displayName;\nconsole.log(\"Organizer: \" + organizerName);\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"9426b-112\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"9426b-112\">Examples</span></span>\n\n```javascript\nvar organizerName = Office.context.mailbox.item.organizer.displayName;\nconsole.log(\"Organizer: \" + organizerName);\n```"
 - uid: Outlook_1_5.Office.EmailAddressDetails.emailAddress
-  summary: <span data-ttu-id="688d5-113">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="688d5-113">Gets the SMTP email address.</span></span>
+  summary: <span data-ttu-id="9426b-113">获取 SMTP 电子邮件地址。</span><span class="sxs-lookup"><span data-stu-id="9426b-113">Gets the SMTP email address.</span></span>
   name: emailAddress
   fullName: emailAddress
   langs:
@@ -62,9 +62,9 @@ items:
     return:
       type:
       - string
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"688d5-114\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"688d5-114\">Examples</span></span>\n\n```javascript\nvar organizerAddress = Office.context.mailbox.item.organizer.emailAddress;\nconsole.log(\"Organizer's email address: \" + organizerAddress);\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"9426b-114\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"9426b-114\">Examples</span></span>\n\n```javascript\nvar organizerAddress = Office.context.mailbox.item.organizer.emailAddress;\nconsole.log(\"Organizer's email address: \" + organizerAddress);\n```"
 - uid: Outlook_1_5.Office.EmailAddressDetails.recipientType
-  summary: <span data-ttu-id="688d5-115">获取收件人的电子邮件地址类型。</span><span class="sxs-lookup"><span data-stu-id="688d5-115">Gets the email address type of a recipient.</span></span>
+  summary: <span data-ttu-id="9426b-115">获取收件人的电子邮件地址类型。</span><span class="sxs-lookup"><span data-stu-id="9426b-115">Gets the email address type of a recipient.</span></span>
   name: recipientType
   fullName: recipientType
   langs:
@@ -75,4 +75,4 @@ items:
     return:
       type:
       - MailboxEnums.RecipientType
-      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"688d5-116\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"688d5-116\">Examples</span></span>\n\n```javascript\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.recipientType);\n});\n```"
+      description: "\n#### <a name=\"examples\"></a><span data-ttu-id=\"9426b-116\">示例</span><span class=\"sxs-lookup\"><span data-stu-id=\"9426b-116\">Examples</span></span>\n\n```javascript\nvar requiredAttendees = Office.context.mailbox.item.requiredAttendees;\nconsole.log(\"There are \" + requiredAttendees.length + \" required attendees.\")\nrequiredAttendees.forEach(function (requiredAttendee) {\n    console.log(\"Attendee \" + requiredAttendee.displayName + \": \" + requiredAttendee.recipientType);\n});\n```"
